# bintboy

./: .gitignore  Cargo.toml  README.md  pokemon_save.txt  savefile.txt  todo.txt
src/: binary_utils.rs  constants.rs  cpu.rs  cpu_state.rs  dma.rs  game_cartridge.rs  gameboy.rs  interrupt_handler.rs  joypad.rs  main.rs  memory.rs  ppu.rs  ppu_new.rs  rom.rs  serial_transfer.rs  timer.rs
src/game_cartridge/: enums.rs  mbc.rs
src/gameboy/: binary_utils.rs  constants.rs  cpu.rs  dma.rs  interrupt_handler.rs  joypad.rs  memory.rs  ppu.rs  serial_transfer.rs  timer.rs
src/gameboy/cpu/: cpu_state.rs
src/gameboy/ppu/: enums.rs  pixel_fetcher.rs  registers.rs  tile_and_sprite.rs
src/util/: constants.rs
