[package]
name = "bintboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
minifb = "0.25.0"
serde = { version = "1.0.201", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.117"
